# resonance-echoes

./: .gitignore  CLAUDE.md  HANDS.md  README.md  helper.md  package-lock.json  package.json  resonance-echoes-v0.1.0.apk.idsig  resonance-echoes.keystore
.claude/: settings.json
.svelte-kit/: ambient.d.ts  non-ambient.d.ts
.svelte-kit/types/: route_meta_data.json
.svelte-kit/types/src/routes/: $types.d.ts
docs/: BUILD-SEQUENCE.md  CHECKLIST.md  FEATURE-BOARD.md  GALAXY-LISTING.md
docs/blueprints/: dbp_backend.ai.json  dbp_frontend.ai.json  pbp_resonance_compass.ai.json
docs/blueprints/layers/: obp_components.ai.json  obp_routes.ai.json  obp_rust_backend.ai.json  obp_stores.ai.json  obp_styles.ai.json  obp_types.ai.json
docs/blueprints/routes/: fbp_add.ai.json  fbp_home.ai.json  fbp_insights.ai.json  fbp_onboarding.ai.json  fbp_settings.ai.json
reports/: 2026-06-30-assessment.md  2026-07-04-assessment.md  analysis.json  inventory.json
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/components/: ComfortBar.svelte  Sidebar.svelte  TimerVisualization.svelte
src/lib/components/icons/: IconTimer.svelte  Icons.svelte
src/lib/stores/: echo.svelte.ts  theme.svelte.ts  timer.svelte.ts
src/lib/theme/: theme.ts
src/lib/types/: types.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/add/: +page.svelte
src/routes/insights/: +page.svelte
src/routes/settings/: +page.svelte
src/routes/timer/: +page.svelte
