[package]
name = "resonance-compass"
version = "0.1.0"
description = "Resonance Compass — sovereign local-first music player from the AudHDities Sanctuary"
authors = ["Aethelred and Quantum Weaver"]
edition = "2021"

[lib]
name = "resonance_compass_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rodio = { version = "0.20", features = ["symphonia-all"] }
lofty = "0.22"
base64 = "0.22"
crossbeam-channel = "0.5"
rustfft = "6"
serde_repr = "0.1.20"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

[profile.release]
strip = true
opt-level = "s"
lto = "thin"

