[package]
name = "resonance-echoes"
version = "0.1.0"
description = "A sovereign journal for logging anything with feeling"
authors = ["Quantum Weaver"]
edition = "2021"

[lib]
name = "resonance_echoes_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
strip = true
opt-level = "s"
lto = "thin"
